- Add production server to swagger file - Add create DB functionality to admin endpoints - Add bash install script to create the virtual environment
